Add RollerCoaster demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ project(fixed LANGUAGES C)
 add_subdirectory(Fixed)
 add_subdirectory(GLMath)
 add_subdirectory(GLES)
+add_subdirectory(RollerCoaster)
