--- a/Fixed/CMakeLists.txt
+++ b/Fixed/CMakeLists.txt
@@ -2,25 +2,21 @@ cmake_minimum_required(VERSION 3.5)
 
 project(fixed LANGUAGES C)
 
-add_executable(gen_cos src/gen_cos.c)
-target_include_directories(gen_cos PRIVATE include)
+find_package(PythonInterp 3 REQUIRED)
 
 add_custom_command(
-    OUTPUT ${fixed_BINARY_DIR}/cos.h
-    COMMAND $<TARGET_FILE:gen_cos>
-    DEPENDS $<TARGET_FILE:gen_cos>
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/cos.h
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/src/gen_cos.py > ${CMAKE_CURRENT_BINARY_DIR}/cos.h
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/gen_cos.py
 )
-
-add_executable(gen_exp src/gen_exp.c)
-target_include_directories(gen_exp PRIVATE include)
 
 add_custom_command(
-    OUTPUT ${fixed_BINARY_DIR}/exp.h
-    COMMAND $<TARGET_FILE:gen_exp>
-    DEPENDS $<TARGET_FILE:gen_exp>
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/exp.h
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/src/gen_exp.py > ${CMAKE_CURRENT_BINARY_DIR}/exp.h
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/gen_exp.py
 )
 
-add_library(fixed STATIC src/fixed.c ${fixed_BINARY_DIR}/cos.h ${fixed_BINARY_DIR}/exp.h)
+add_library(fixed STATIC src/fixed.c ${CMAKE_CURRENT_BINARY_DIR}/cos.h ${CMAKE_CURRENT_BINARY_DIR}/exp.h)
 add_library(gl::fixed ALIAS fixed)
 
-target_include_directories(fixed PRIVATE ${fixed_BINARY_DIR} PUBLIC include)
+target_include_directories(fixed PRIVATE ${CMAKE_CURRENT_BINARY_DIR} PUBLIC include)
