Fix Ubuntu and Windows RollerCoaster builds

--- a/RollerCoaster/CMakeLists.txt
+++ b/RollerCoaster/CMakeLists.txt
@@ -4,12 +4,17 @@ project(roller LANGUAGES C)
 
 find_package(SDL2 REQUIRED)
 
-add_executable(roller
+add_executable(roller WIN32
     main.c
     roller.c
     point.c
     pillar.c
 )
 
-target_include_directories(roller PRIVATE ${SDL2_INCLUDE_DIRS})
-target_link_libraries(roller PUBLIC gl::gles PRIVATE ${SDL2_LIBRARIES})
+if (WIN32)
+    set(LINK_LIBS SDL2::SDL2 SDL2::SDL2main)
+else()
+    set(LINK_LIBS SDL2 SDL2main m)
+endif()
+
+target_link_libraries(roller PUBLIC gl::gles PRIVATE ${LINK_LIBS})
